VIEW-1681 Use 2 threads and cleanup `pom.xml` file