@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
 	<groupId>com.appnexus.viewability.core.surefireJunitTests</groupId>
 	<artifactId>main</artifactId>
-	
-	<version>1.0.0</version>	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<threadCount>32</threadCount>
-	</properties>
+	<version>1.0.0</version>
 	
 	<build>
 		<directory>target</directory>
@@ -24,40 +17,37 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.19.1</version>
 					<configuration>
-						<skip>false</skip>
-						
-						<perCoreThreadCount>false</perCoreThreadCount>
-						<!-- BrowserStack VM count + queue = VM count * 2 -->
-						<threadCount>${threadCount}</threadCount>
-						<!-- Possible values are:  methods/classes/suites/suitesAndClasses/suitesAndMethods/classesAndMethods/all. -->
+						<threadCount>2</threadCount>
 						<parallel>all</parallel>
-						<parallelOptimized>false</parallelOptimized>
-						<argLine>-Xmx1024M -XX:MaxPermSize=1024M</argLine>
-						<shutdown>exit</shutdown>
-						<skipAfterFailureCount>100</skipAfterFailureCount>
+					</configuration>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.5.1</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
 					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
-  </build>
-  
-  
-  	<dependencies>
-  		<dependency>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-surefire-plugin</artifactId>
-  			<version>2.19.1</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.apache.maven.surefire</groupId>
-  			<artifactId>surefire-junit47</artifactId>
-  			<version>2.19.1</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>junit</groupId>
-  			<artifactId>junit</artifactId>
-  			<version>4.12</version>
-  		</dependency>
-  	</dependencies>
-  
+	</build>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.19.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.surefire</groupId>
+			<artifactId>surefire-junit47</artifactId>
+			<version>2.19.1</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+	</dependencies>
 </project>
